WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56302
[GTK] Fix compilation warning after
r80892
https://bugs.webkit.org/show_bug.cgi?id=56302
Summary
[GTK] Fix compilation warning after r80892
Alejandro G. Castro
Reported
2011-03-14 03:44:27 PDT
This warning was added: ../../Tools/DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:657:1: warning: no return statement in function returning non-void
Attachments
Proposed patch
(1.29 KB, patch)
2011-03-14 03:46 PDT
,
Alejandro G. Castro
mrobinson
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alejandro G. Castro
Comment 1
2011-03-14 03:46:06 PDT
Created
attachment 85665
[details]
Proposed patch
Alejandro G. Castro
Comment 2
2011-03-15 03:12:00 PDT
Landed
http://trac.webkit.org/changeset/81123
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug