2011-03-15  Alejandro G. Castro  <alex@igalia.com>

Reviewed by Martin Robinson.

        [GTK] Fix compilation warning after r80892
        https://bugs.webkit.org/show_bug.cgi?id=56302

        * DumpRenderTree/gtk/LayoutTestControllerGtk.cpp:
        (LayoutTestController::originsWithLocalStorage):

Canonical link: https://commits.webkit.org/71003@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81123 268f45cc-cd09-0410-ab3c-d52691b4dbfc